asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__log__limit_2_commits_other.snap
---
source: src/gitui/tests/log.rs
expression: ctx.redact_buffer()
---
▌8bb5532 main add first commit                                                  |
 6c08cf7 add second commit                                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: a908290abddd40c9
