asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__log__limit_set_10.snap
---
source: asyncgit/src/lib/gitui/tests/log.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 3 commit.                             |
                                                                                |
 Recent commits                                                                 |
 8bb5532 main add first commit                                                  |
 6c08cf7 add second commit                                                      |
 79e63f1 add third commit                                                       |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Log               Arguments                                                     |
l current         -F Search messages (--grep)                                   |
o other           -n Limit number of commits (-n=10)                            |
q Quit/Close                                                                    |
styles_hash: b6c57d2436c4362b
