asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__log__log_other.snap
---
source: src/gitui/tests/log.rs
expression: ctx.redact_buffer()
---
▌6c08cf7 add second commit                                                      |
 79e63f1 add third commit                                                       |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 99c011aa1629f1d
